--- a/DoAnWebAPI_WebMVC/Views/Shared/_AuthLayout.cshtml
+++ b/DoAnWebAPI_WebMVC/Views/Shared/_AuthLayout.cshtml
@@ -22,8 +22,11 @@
     </footer>
 
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
-    <script src="~/js/Login.js" asp-append-version="true"></script>
+    <script src="~/lib/jquery-validation/dist/jquery.validate.min.js"></script>
+    <script src="~/lib/jquery-validation-unobtrusive/jquery.validate.unobtrusive.min.js"></script>
+
     <script src="~/js/Footer.js" asp-append-version="true"></script>
+
     @await RenderSectionAsync("Scripts", required: false)
 </body>
 </html>
