Tai anh len thanh cong

--- a/DoAnWebAPI_WebMVC/Views/Shared/_CollectionLayout.cshtml
+++ b/DoAnWebAPI_WebMVC/Views/Shared/_CollectionLayout.cshtml
@@ -31,6 +31,7 @@
     <script src="~/js/Header.js" asp-append-version="true"></script>
 
     <script src="https://unpkg.com/lucide@latest"></script>
+    <script src="~/js/apiServices.js"></script>
     @await RenderSectionAsync("Scripts", required: false)
 </body>
 </html>
