--- a/DoAnWebAPI_WebMVC/Views/Shared/_Layout.cshtml
+++ b/DoAnWebAPI_WebMVC/Views/Shared/_Layout.cshtml
@@ -37,6 +37,7 @@
     <script src="~/js/Filter.js"></script>
     <script src="~/js/site.js" asp-append-version="true"></script>
     <script src="~/js/Footer.js" asp-append-version="true"></script>
+    <script src="~/js//apiServices.js"></script>
     
     <script src="https://unpkg.com/lucide@latest"></script>
 
