--- a/DoAnWebAPI_WebMVC/Views/Shared/_Adminlayout.cshtml
+++ b/DoAnWebAPI_WebMVC/Views/Shared/_Adminlayout.cshtml
@@ -41,5 +41,6 @@
     <script src="~/js/Footer.js"></script>
     <script src="~/js/Sidebar.js"></script>
     <script src="https://cdn.tailwindcss.com"></script>
+    <script src="~/js/apiServices.js"></script>
 </body>
 </html>
