sua anh xong co ban, load anh trong bo suu tap

--- a/DoAnWebAPI_WebMVC/Views/Collection/Collection.cshtml
+++ b/DoAnWebAPI_WebMVC/Views/Collection/Collection.cshtml
@@ -18,6 +18,7 @@
     </div>
     <hr class="divider">
     <div id="images-grid" class="item-grid"></div>
+    <div id="images-pagination" class="pagination-container"></div>
 </div>
 @section Scripts {
     <script src="~/js/ImageDetail.js" asp-append-version="true"></script>
