--- a/DoAnWebAPI_WebMVC/Views/Image/EditImage.cshtml
+++ b/DoAnWebAPI_WebMVC/Views/Image/EditImage.cshtml
@@ -28,14 +28,12 @@
         </div>
 
         <div>
-            <label class="form-label label-with-icon"><i data-lucide="upload"></i> Ảnh</label>
-            <div class="image-upload-container">
-                <img id="image-preview" src="" alt="Xem trước ảnh" class="image-preview" />
-                <button type="button" id="upload-image-btn" class="add-image-placeholder--single">
-                    <i data-lucide="upload"></i>
-                    <span class="add-image-text">Thay đổi ảnh</span>
-                </button>
-                <input type="file" id="file-input" accept="image/*" class="hidden-input" />
+            <div>
+                <label class="form-label label-with-icon"><i data-lucide="image"></i> Ảnh hiện tại</label>
+                <div class="image-upload-container">
+                    @* Chỉ hiển thị ảnh xem trước, không cho phép thay đổi *@
+                    <img id="image-preview" src="" alt="Xem trước ảnh" class="image-preview-edit" />
+                </div>
             </div>
         </div>
 
