Da them duoc bo suu tap

--- a/DoAnWebAPI_WebMVC/Views/Collection/AddCollection.cshtml
+++ b/DoAnWebAPI_WebMVC/Views/Collection/AddCollection.cshtml
@@ -1,6 +1,6 @@
 ﻿@{
     ViewData["Title"] = "Thêm Bộ Sưu Tập";
-    Layout = "_FormLayout"; // <-- Sử dụng layout quản trị mới
+    Layout = "_FormLayout";
 }
 
 <div class="form-container">
